# exhume_partitions

./: Cargo.toml  README.md
src/: ebr.rs  gpt.rs  lib.rs  main.rs  mbr.rs
src/gpt/: mod.rs
src/mbr/: mod.rs
src/part/: mod.rs
