[package]
name = "exhume_partitions"
version = "0.1.0"
edition = "2021"
description = "Extract partitions from a Body of data."
documentation = "https://www.forensicxlab.com/docs/category/exhume---partitions"
authors = ["k1nd0ne"]
license = "GPL-2.0-or-later"

[dependencies]
exhume_body = "=0.1.1"
serde = { version = "1", features = ["derive"] }
glob = "0.3.1"
byteorder = "1.4"
uguid = "2.0.0"
clap = "4.0"
prettytable-rs = "^0.10"
capstone = "0.10"
log = "0.4.25"
serde_json = "1.0.135"
env_logger = "0.11.6"
