[package]
name = "exhume_partitions"
version = "0.3.4"
edition = "2021"
description = "Extract GPT and (E/M)BR partitions from a Body of data."
readme = "README.md"
documentation = "https://www.forensicxlab.com/docs/category/exhume---partitions"
authors = ["k1nd0ne"]
license = "GPL-2.0-or-later"

[dependencies]
exhume_body = "=0.3.4"

serde = { version = "1", features = ["derive"] }
serde_with = "3.16.1"
glob = "0.3.1"
byteorder = "1.4"
clap = { version = "4.5", features = ["cargo"] }
prettytable-rs = "^0.10"
capstone = "0.13.0"
log = "0.4.29"
serde_json = "1.0.135"
env_logger = "0.11.6"
